blog/infra/k8s/events-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
      - name: events
        image: alaguselvan14/events
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4005
