blog/infra/k8s/comments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: alaguselvan14/comments
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-services
spec:
  selector:
    app: comments
  ports:
    - name: comments
      port: 4001
      targetPort: 4001
