blog/infra/k8s/events-services.yml
apiVersion: v1
kind: Service
metadata:
  name: events-services
spec:
  type: ClusterIP
  selector:
    app: events
  ports:
  - name: events
    protocol: TCP
    port: 4005
    targetPort: 4005
