blog/infra/k8s/moderation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: alaguselvan14/moderation
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-services
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      port: 4003
      targetPort: 4003
