blog/infra/k8s/posts-services.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-services
spec:
  type: NodePort
  selector:
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
