blog/infra/k8s/query-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: alaguselvan14/query
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: query-services
spec:
  selector:
    app: query
  ports:
    - name: query
      port: 4002
      targetPort: 4002
