blog/infra/k8s/ingress-services.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-services
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: post-clusterip-service
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-services
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-services
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: client-services
              servicePort: 3000
